--- a/CardioHealth/TasksAndSteps/APHFitnessTest/CustomViews/APHFitnessSixMinuteFitnessTestView.xib
+++ b/CardioHealth/TasksAndSteps/APHFitnessTest/CustomViews/APHFitnessSixMinuteFitnessTestView.xib
@@ -7,102 +7,81 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="APHFitnessSixMinuteFitnessTestView">
-            <rect key="frame" x="0.0" y="0.0" width="280" height="160"/>
+            <rect key="frame" x="0.0" y="0.0" width="280" height="200"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Y5S-6o-Anf" userLabel="footerContainer">
-                    <rect key="frame" x="0.0" y="80" width="280" height="80"/>
-                    <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EOO-VG-QMb" userLabel="segmentation">
-                            <rect key="frame" x="139" y="0.0" width="1" height="80"/>
-                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="80" id="UZD-tH-9kq"/>
-                                <constraint firstAttribute="width" constant="1" id="zW8-KK-z1f"/>
-                            </constraints>
-                        </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9sA-PE-gEI" userLabel="milesContainer">
-                            <rect key="frame" x="0.0" y="0.0" width="140" height="80"/>
-                            <subviews>
-                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dJK-7Q-ihC" userLabel="FeetContainer">
-                                    <rect key="frame" x="0.0" y="0.0" width="140" height="44"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Feet" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EPk-ql-t9V">
-                                            <rect key="frame" x="67" y="0.0" width="58" height="44"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                            <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="6minwalk-Icon-miles" translatesAutoresizingMaskIntoConstraints="NO" id="cS8-A9-N8a">
-                                            <rect key="frame" x="18" y="0.0" width="43" height="43"/>
-                                        </imageView>
-                                    </subviews>
-                                </view>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4AP-O7-jNd">
-                                    <rect key="frame" x="0.0" y="46" width="140" height="33.5"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="28"/>
-                                    <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                            </subviews>
-                        </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rkF-bK-WRY" userLabel="BPMContainer">
-                            <rect key="frame" x="140" y="-8" width="140" height="88"/>
-                            <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="--" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3u1-Ke-e7g" userLabel="BPMDisplay">
-                                    <rect key="frame" x="0.0" y="54" width="140" height="33.5"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="28"/>
-                                    <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QIz-Xn-w9c" userLabel="BPMContainer">
-                                    <rect key="frame" x="0.0" y="0.0" width="140" height="52.5"/>
-                                    <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="6minwalk-Icon-bpm" translatesAutoresizingMaskIntoConstraints="NO" id="Zg0-KN-Pce">
-                                            <rect key="frame" x="19" y="7" width="43" height="43"/>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="BPM" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KJN-34-tbJ">
-                                            <rect key="frame" x="70" y="8" width="54.5" height="44"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                            <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                </view>
-                            </subviews>
-                        </view>
-                    </subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EPk-ql-t9V">
+                    <rect key="frame" x="0.0" y="-11" width="280" height="46"/>
                     <constraints>
-                        <constraint firstItem="9sA-PE-gEI" firstAttribute="leading" secondItem="Y5S-6o-Anf" secondAttribute="leading" id="3cX-5z-zwQ"/>
-                        <constraint firstAttribute="trailing" secondItem="rkF-bK-WRY" secondAttribute="trailing" id="4mo-TO-0W1"/>
-                        <constraint firstItem="9sA-PE-gEI" firstAttribute="top" secondItem="Y5S-6o-Anf" secondAttribute="top" id="4vo-WR-UAg"/>
-                        <constraint firstAttribute="height" constant="80" id="T8I-Vh-peO"/>
-                        <constraint firstAttribute="centerX" secondItem="EOO-VG-QMb" secondAttribute="centerX" constant="0.5" id="UFb-o5-7SG"/>
-                        <constraint firstItem="rkF-bK-WRY" firstAttribute="top" secondItem="Y5S-6o-Anf" secondAttribute="top" constant="-8" id="V5G-Rv-Jea"/>
-                        <constraint firstAttribute="centerY" secondItem="EOO-VG-QMb" secondAttribute="centerY" id="WIZ-2f-VYw"/>
-                        <constraint firstAttribute="bottom" secondItem="9sA-PE-gEI" secondAttribute="bottom" id="Ypg-zC-OZM"/>
-                        <constraint firstItem="rkF-bK-WRY" firstAttribute="leading" secondItem="EOO-VG-QMb" secondAttribute="trailing" id="bex-1i-ghU"/>
-                        <constraint firstAttribute="bottom" secondItem="rkF-bK-WRY" secondAttribute="bottom" id="kb6-aU-IXZ"/>
-                        <constraint firstItem="EOO-VG-QMb" firstAttribute="leading" secondItem="9sA-PE-gEI" secondAttribute="trailing" constant="-1" id="qa7-qn-hJx"/>
+                        <constraint firstAttribute="width" constant="280" id="FHS-AB-Y6Q"/>
+                        <constraint firstAttribute="height" constant="46" id="xJk-3v-p2Q"/>
                     </constraints>
-                </view>
+                    <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                    <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0′" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4AP-O7-jNd">
+                    <rect key="frame" x="0.0" y="30" width="280" height="80"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="80" id="yA5-FQ-ryb"/>
+                        <constraint firstAttribute="width" constant="280" id="zdb-tz-0rf"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="104"/>
+                    <color key="textColor" red="0.51764705882352946" green="0.0" blue="0.13725490196078433" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="6minwalk-Icon-bpm" translatesAutoresizingMaskIntoConstraints="NO" id="Zg0-KN-Pce">
+                    <rect key="frame" x="90" y="128" width="30" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="FKf-Xz-lKs"/>
+                        <constraint firstAttribute="width" constant="30" id="pm6-8H-eX2"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BPM" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KJN-34-tbJ">
+                    <rect key="frame" x="120" y="128" width="70" height="30"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                    <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="86" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3u1-Ke-e7g" userLabel="BPMDisplay">
+                    <rect key="frame" x="70" y="166" width="140" height="33.5"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="140" id="4a7-jd-jNP"/>
+                        <constraint firstAttribute="height" constant="33.5" id="RKA-u7-RqY"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                    <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="Y5S-6o-Anf" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="CfB-N9-eef"/>
-                <constraint firstAttribute="trailing" secondItem="Y5S-6o-Anf" secondAttribute="trailing" id="Qc6-qJ-xbi"/>
-                <constraint firstAttribute="bottom" secondItem="Y5S-6o-Anf" secondAttribute="bottom" id="Tc1-VD-U4b"/>
+                <constraint firstAttribute="centerX" secondItem="EPk-ql-t9V" secondAttribute="centerX" id="0KK-Ik-NM3"/>
+                <constraint firstAttribute="centerY" secondItem="KJN-34-tbJ" secondAttribute="centerY" constant="-43" id="0eJ-Ar-sQ3"/>
+                <constraint firstItem="KJN-34-tbJ" firstAttribute="leading" secondItem="Zg0-KN-Pce" secondAttribute="trailing" id="5Mi-E8-Sdi"/>
+                <constraint firstAttribute="centerX" secondItem="KJN-34-tbJ" secondAttribute="centerX" constant="-15" id="Bao-GW-PQx"/>
+                <constraint firstAttribute="centerX" secondItem="3u1-Ke-e7g" secondAttribute="centerX" id="J82-ck-fjs"/>
+                <constraint firstAttribute="centerX" secondItem="4AP-O7-jNd" secondAttribute="centerX" id="JX1-Ia-sPK"/>
+                <constraint firstAttribute="bottom" secondItem="3u1-Ke-e7g" secondAttribute="bottom" constant="0.5" id="M27-Ng-dgm"/>
+                <constraint firstItem="4AP-O7-jNd" firstAttribute="leading" secondItem="Zg0-KN-Pce" secondAttribute="trailing" constant="-120" id="TeW-aS-ttZ"/>
+                <constraint firstAttribute="centerY" secondItem="EPk-ql-t9V" secondAttribute="centerY" constant="88" id="UFK-Oi-hSc"/>
+                <constraint firstAttribute="centerX" secondItem="Zg0-KN-Pce" secondAttribute="centerX" constant="35" id="jNg-5h-ukP"/>
+                <constraint firstAttribute="centerY" secondItem="Zg0-KN-Pce" secondAttribute="centerY" constant="-43" id="jNi-8s-Rdm"/>
+                <constraint firstAttribute="centerY" secondItem="3u1-Ke-e7g" secondAttribute="centerY" constant="-82.75" id="juc-sG-XKt"/>
+                <constraint firstItem="3u1-Ke-e7g" firstAttribute="top" secondItem="KJN-34-tbJ" secondAttribute="bottom" constant="8" id="tOu-FU-1bS"/>
+                <constraint firstAttribute="centerY" secondItem="4AP-O7-jNd" secondAttribute="centerY" constant="30" id="zuK-0j-Xbo"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="BPMTitleLabel" destination="KJN-34-tbJ" id="qVN-Sr-r35"/>
                 <outlet property="distanceTotalLabel" destination="4AP-O7-jNd" id="Olu-2L-aqM"/>
+                <outlet property="heartImage" destination="Zg0-KN-Pce" id="4YS-qV-juy"/>
                 <outlet property="heartRateLabel" destination="3u1-Ke-e7g" id="8vz-Ah-0SD"/>
             </connections>
-            <point key="canvasLocation" x="356" y="89"/>
+            <point key="canvasLocation" x="318" y="89"/>
         </view>
     </objects>
     <resources>
         <image name="6minwalk-Icon-bpm" width="42" height="37"/>
-        <image name="6minwalk-Icon-miles" width="43" height="43"/>
     </resources>
 </document>
