--- a/CardioHealth/TasksAndSteps/APHFitnessTest/CustomViews/APHFitnessSixMinuteFitnessTestView.xib
+++ b/CardioHealth/TasksAndSteps/APHFitnessTest/CustomViews/APHFitnessSixMinuteFitnessTestView.xib
@@ -2,83 +2,84 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A388a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="APHFitnessSixMinuteFitnessTestView">
-            <rect key="frame" x="0.0" y="0.0" width="280" height="200"/>
+        <view contentMode="scaleToFill" id="PFo-6T-I1h" customClass="APHFitnessSixMinuteFitnessTestView">
+            <rect key="frame" x="0.0" y="0.0" width="280" height="280"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EPk-ql-t9V">
-                    <rect key="frame" x="0.0" y="-11" width="280" height="46"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ufs-oN-Cfb">
+                    <rect key="frame" x="0.0" y="4" width="280" height="55"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="280" id="FHS-AB-Y6Q"/>
-                        <constraint firstAttribute="height" constant="46" id="xJk-3v-p2Q"/>
+                        <constraint firstAttribute="height" constant="55" id="amu-db-6uz"/>
+                        <constraint firstAttribute="width" constant="280" id="q1z-CD-D69"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="32"/>
-                    <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0′" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4AP-O7-jNd">
-                    <rect key="frame" x="0.0" y="30" width="280" height="80"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="17u-5N-srW">
+                    <rect key="frame" x="0.0" y="216" width="280" height="48"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="80" id="yA5-FQ-ryb"/>
-                        <constraint firstAttribute="width" constant="280" id="zdb-tz-0rf"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="104"/>
-                    <color key="textColor" red="0.51764705882352946" green="0.0" blue="0.13725490196078433" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="6minwalk-Icon-bpm" translatesAutoresizingMaskIntoConstraints="NO" id="Zg0-KN-Pce">
-                    <rect key="frame" x="90" y="128" width="30" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="30" id="FKf-Xz-lKs"/>
-                        <constraint firstAttribute="width" constant="30" id="pm6-8H-eX2"/>
-                    </constraints>
-                </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BPM" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KJN-34-tbJ">
-                    <rect key="frame" x="120" y="128" width="70" height="30"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="32"/>
-                    <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3u1-Ke-e7g" userLabel="BPMDisplay">
-                    <rect key="frame" x="70" y="166" width="140" height="33.5"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="140" id="4a7-jd-jNP"/>
-                        <constraint firstAttribute="height" constant="33.5" id="RKA-u7-RqY"/>
+                        <constraint firstAttribute="width" constant="280" id="EOq-I0-1gY"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="40"/>
-                    <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="6minwalk-Icon-bpm" translatesAutoresizingMaskIntoConstraints="NO" id="vhg-vf-yxt">
+                    <rect key="frame" x="90" y="179.5" width="30" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="HxB-AY-4cD"/>
+                        <constraint firstAttribute="width" constant="30" id="JQg-HA-RCD"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BPM" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cC5-oS-EFY">
+                    <rect key="frame" x="121" y="175" width="70" height="38.5"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="70" id="Xcj-gQ-CBF"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0′" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ebn-g6-URM">
+                    <rect key="frame" x="0.0" y="43" width="280" height="97"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="280" id="6Yf-t6-syg"/>
+                        <constraint firstAttribute="height" constant="97" id="9EF-CO-O0A"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="104"/>
+                    <color key="textColor" red="0.62745098040000002" green="0.0" blue="0.1647058824" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="centerX" secondItem="EPk-ql-t9V" secondAttribute="centerX" id="0KK-Ik-NM3"/>
-                <constraint firstAttribute="centerY" secondItem="KJN-34-tbJ" secondAttribute="centerY" constant="-43" id="0eJ-Ar-sQ3"/>
-                <constraint firstItem="KJN-34-tbJ" firstAttribute="leading" secondItem="Zg0-KN-Pce" secondAttribute="trailing" id="5Mi-E8-Sdi"/>
-                <constraint firstAttribute="centerX" secondItem="KJN-34-tbJ" secondAttribute="centerX" constant="-15" id="Bao-GW-PQx"/>
-                <constraint firstAttribute="centerX" secondItem="3u1-Ke-e7g" secondAttribute="centerX" id="J82-ck-fjs"/>
-                <constraint firstAttribute="centerX" secondItem="4AP-O7-jNd" secondAttribute="centerX" id="JX1-Ia-sPK"/>
-                <constraint firstAttribute="bottom" secondItem="3u1-Ke-e7g" secondAttribute="bottom" constant="0.5" id="M27-Ng-dgm"/>
-                <constraint firstItem="4AP-O7-jNd" firstAttribute="leading" secondItem="Zg0-KN-Pce" secondAttribute="trailing" constant="-120" id="TeW-aS-ttZ"/>
-                <constraint firstAttribute="centerY" secondItem="EPk-ql-t9V" secondAttribute="centerY" constant="88" id="UFK-Oi-hSc"/>
-                <constraint firstAttribute="centerX" secondItem="Zg0-KN-Pce" secondAttribute="centerX" constant="35" id="jNg-5h-ukP"/>
-                <constraint firstAttribute="centerY" secondItem="Zg0-KN-Pce" secondAttribute="centerY" constant="-43" id="jNi-8s-Rdm"/>
-                <constraint firstAttribute="centerY" secondItem="3u1-Ke-e7g" secondAttribute="centerY" constant="-82.75" id="juc-sG-XKt"/>
-                <constraint firstItem="3u1-Ke-e7g" firstAttribute="top" secondItem="KJN-34-tbJ" secondAttribute="bottom" constant="8" id="tOu-FU-1bS"/>
-                <constraint firstAttribute="centerY" secondItem="4AP-O7-jNd" secondAttribute="centerY" constant="30" id="zuK-0j-Xbo"/>
+                <constraint firstAttribute="centerX" secondItem="ebn-g6-URM" secondAttribute="centerX" id="2yy-cg-awJ"/>
+                <constraint firstAttribute="centerX" secondItem="cC5-oS-EFY" secondAttribute="centerX" constant="-16" id="DS3-oD-ytr"/>
+                <constraint firstItem="cC5-oS-EFY" firstAttribute="centerY" secondItem="vhg-vf-yxt" secondAttribute="centerY" constant="-0.25" id="FCY-Lh-0a4"/>
+                <constraint firstAttribute="centerX" secondItem="vhg-vf-yxt" secondAttribute="centerX" constant="35" id="FVL-Ob-1ha"/>
+                <constraint firstAttribute="centerX" secondItem="17u-5N-srW" secondAttribute="centerX" id="NuF-ws-A4k"/>
+                <constraint firstItem="cC5-oS-EFY" firstAttribute="leading" secondItem="vhg-vf-yxt" secondAttribute="trailing" constant="1" id="eXG-VZ-CGQ"/>
+                <constraint firstItem="17u-5N-srW" firstAttribute="top" secondItem="cC5-oS-EFY" secondAttribute="bottom" constant="2.5" id="eZI-A3-6jo"/>
+                <constraint firstAttribute="centerY" secondItem="vhg-vf-yxt" secondAttribute="centerY" constant="-54.5" id="msb-J7-Z4A"/>
+                <constraint firstItem="Ufs-oN-Cfb" firstAttribute="top" secondItem="PFo-6T-I1h" secondAttribute="top" constant="4" id="oci-24-iq1"/>
+                <constraint firstAttribute="bottom" secondItem="17u-5N-srW" secondAttribute="bottom" constant="16" id="pNV-Q0-yip"/>
+                <constraint firstAttribute="centerX" secondItem="Ufs-oN-Cfb" secondAttribute="centerX" id="q0b-UY-VuO"/>
+                <constraint firstAttribute="centerY" secondItem="Ufs-oN-Cfb" secondAttribute="centerY" constant="108.5" id="rIK-Qw-GwK"/>
+                <constraint firstItem="ebn-g6-URM" firstAttribute="top" secondItem="Ufs-oN-Cfb" secondAttribute="bottom" multiplier="9:16" constant="10" id="x7U-mH-paf"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="BPMTitleLabel" destination="KJN-34-tbJ" id="qVN-Sr-r35"/>
-                <outlet property="distanceTotalLabel" destination="4AP-O7-jNd" id="Olu-2L-aqM"/>
-                <outlet property="heartImage" destination="Zg0-KN-Pce" id="4YS-qV-juy"/>
-                <outlet property="heartRateLabel" destination="3u1-Ke-e7g" id="8vz-Ah-0SD"/>
+                <outlet property="distanceTotalLabel" destination="ebn-g6-URM" id="E6Q-7t-ETT"/>
+                <outlet property="heartRateLabel" destination="17u-5N-srW" id="MEG-b0-Blu"/>
             </connections>
-            <point key="canvasLocation" x="318" y="89"/>
+            <point key="canvasLocation" x="343" y="234"/>
         </view>
     </objects>
     <resources>
