--- a/CardioHealth/TasksAndSteps/HeartAgeControllers/Intro/APHHeartAgeIntroStepViewController.xib
+++ b/CardioHealth/TasksAndSteps/HeartAgeControllers/Intro/APHHeartAgeIntroStepViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A388a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
@@ -78,9 +78,9 @@
                         <constraint firstAttribute="centerX" secondItem="byy-nH-eFK" secondAttribute="centerX" id="ncQ-Sq-Mld"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uPs-t8-Kxj" userLabel="LineDivider">
+                <view alpha="0.10000000000000001" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uPs-t8-Kxj" userLabel="LineDivider">
                     <rect key="frame" x="0.0" y="150" width="320" height="1"/>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.4823529411764706" green="0.4823529411764706" blue="0.50588235294117645" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="uLG-Yv-kCW"/>
                     </constraints>
@@ -99,9 +99,9 @@
                         <action selector="getStartedWasTapped:" destination="-1" eventType="touchUpInside" id="2Vm-cP-hDX"/>
                     </connections>
                 </button>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DeW-ey-MVO" userLabel="LineDivider2">
+                <view alpha="0.10000000000000001" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DeW-ey-MVO" userLabel="LineDivider2">
                     <rect key="frame" x="0.0" y="242" width="320" height="1"/>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.4823529411764706" green="0.4823529411764706" blue="0.50588235294117645" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="OFm-Z6-gLq"/>
                     </constraints>
